# acme-azure-function

./: .gitignore  Cargo.toml  Makefile  README.md  acme-azure-function.fsproj  build.sh  clippy.toml  deployment-template.json
.cargo/: config.toml
.github/workflows/: ci.yaml
AcmeFunction/: ArnavionDev.AzureFunctions.AcmeFunction.fsproj  README.md  build.sh  deployment-template.json  packages.lock.json
AcmeFunction/src/: Acme.fs  Asn1.fs  BeginAcmeOrder.fs  CheckKeyVaultCertificate.fs  CreateCsr.fs  EndAcmeOrder.fs  GetAcmeAccountKey.fs  Ocsp.fs  Orchestrator.fs  SetDnsTxtRecord.fs  SetNewKeyVaultCertificate.fs  Settings.fs  X509.fs
Common/: ArnavionDev.AzureFunctions.Common.fsproj  packages.lock.json
Common/src/: Common.fs
Common/src/RestAPI/: Acme.fs  Azure.fs
UpdateCdnCertificateFunction/: ArnavionDev.AzureFunctions.UpdateCdnCertificateFunction.fsproj  README.md  build.sh  deployment-template.json
UpdateCdnCertificateFunction/src/: Settings.fs  UpdateCdnCertificate.fs
acme/: Cargo.toml  README.md  build.sh
acme/src/: lib.rs  main.rs  proto.rs
azure/: Cargo.toml
azure/src/: auth.rs  cdn.rs  dns.rs  lib.rs  log_analytics.rs
azure/src/key_vault/: certificate.rs  key.rs  mod.rs
azure/src/management/: cdn.rs  dns.rs  log_analytics.rs  mod.rs
docker/: build.sh
function-deploy-cert-to-cdn/: Cargo.toml  README.md  build.sh
function-deploy-cert-to-cdn/src/: main.rs
function-host/: Cargo.toml
function-host/src/: lib.rs
function-renew-cert/: Cargo.toml  README.md  build.sh
function-renew-cert/src/: lib.rs  main.rs
function-worker/: Cargo.toml
function-worker/src/: lib.rs
http-common/: Cargo.toml
http-common/src/: lib.rs
log2/: Cargo.toml
log2/src/: lib.rs  object_id.rs
once_cell2/: Cargo.toml
scripts/: build.common.sh  containers.sh  docker.sh  prepare-loganalytics-table-schema.sh
src/: Common.fs  Settings.fs  main.rs
src/RenewKeyVaultCertificate/: BeginAcmeOrder.fs  CheckKeyVaultCertificate.fs  CreateCsr.fs  EndAcmeOrder.fs  GetAcmeAccountKey.fs  RenewKeyVaultCertificateOrchestrator.fs  SetChallengeBlobInStorageAccount.fs  SetNewKeyVaultCertificate.fs
src/RestAPI/: Acme.fs  Azure.fs
src/UpdateCdnCertificate/: UpdateCdnCertificate.fs
time2/: Cargo.toml
time2/src/: lib.rs
update-cdn-cert/: Cargo.toml  README.md  build.sh
update-cdn-cert/src/: main.rs
