[package]
name = "acme-azure-function"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false }

azure = { path = "azure" }
function-worker = { path = "function-worker" }
function-renew-cert = { path = "function-renew-cert" }
log2 = { path = "log2" }


[workspace]
members = [
	"acme",
	"azure",
	"function-worker",
	"http-common",
	"log2",
	"time2",

	"function-renew-cert",
]
resolver = "2"


[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
