[package]
name = "acme-azure-function"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false }

azure = { path = "azure" }
function-worker = { path = "function-worker" }
function-renew-cert = { path = "function-renew-cert" }
log2 = { path = "log2" }


[workspace]
members = [
	"acme",
	"azure",
	"function-renew-cert",
	"function-worker",
	"http-common",
	"log2",
	"time2",
]
resolver = "2"


[workspace.lints.rust]
rust_2018_idioms = "deny"
warnings = "deny"


[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
default_trait_access = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
type_complexity = "allow"


[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
