[package]
name = "acme"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2018"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
chrono = { version = "0.4", default-features = false, features = [
	"clock", # for chrono::Utc::now()
] }
hyper = { version = "0.14", default-features = false }
once_cell = { version = "1", default-features = false, features = [
	"std", # for once_cell::sync
] }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
sha2 = { version = "0.9", default-features = false }
tokio = { version = "1", default-features = false, features = [
	"time",
] }

azure = { path = "../azure", features = [
	"dns",
	"key_vault_cert",
	"key_vault_key",
] }
function-worker = { path = "../function-worker" }
http-common = { path = "../http-common" }
log2 = { path = "../log2" }
