[package]
name = "acme"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
base64 = { version = "0.13", default-features = false, features = [
	"std", # for base64::read, base64::write
] }
futures-util = { version = "0.3", default-features = false }
http = { version = "0.2.5", default-features = false }
hyper = { version = "0.14", default-features = false, features = [
	"stream",
] }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
sha2 = { version = "0.10", default-features = false, features = [
	"std", # for sha2::Sha256: std::io::Write
] }
tokio = { version = "1", default-features = false, features = [
	"time",
] }

http-common = { path = "../http-common" }
log2 = { path = "../log2" }
once_cell2 = { path = "../once_cell2" }
