[package]
name = "acme"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
base64 = { version = "0.22", default-features = false, features = [
	"std", # for base64::write
] }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
sha2 = { version = "0.10", default-features = false, features = [
	"std", # for sha2::Sha256: std::io::Write
] }
tokio = { version = "1", default-features = false, features = [
	"time",
] }

http-common = { path = "../http-common" }
log2 = { path = "../log2" }


[lints]
workspace = true
