[package]
name = "azure"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
base64 = { version = "0.21", default-features = false }
bytes = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
	"clock", # for chrono::Utc::now()
] }
form_urlencoded = { version = "1", default-features = false }
futures-util = { version = "0.3", default-features = false }
hmac = { version = "0.12", default-features = false }
http = { version = "0.2.7", default-features = false }
hyper = { version = "0.14", default-features = false, features = [
	"stream",
] }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
sha2 = { version = "0.10", default-features = false }
tokio = { version = "1", default-features = false, features = [
	"parking_lot", # for slimmer tokio::sync::RwLock
	"sync",
	"time",
] }

acme = { path = "../acme" }
http-common = { path = "../http-common" }
log2 = { path = "../log2" }
once_cell2 = { path = "../once_cell2" }
