[package]
name = "azure"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
base64 = { version = "0.21", default-features = false }
bytes = { version = "1", default-features = false }
form_urlencoded = { version = "1", default-features = false }
futures-util = { version = "0.3", default-features = false }
hmac = { version = "0.12", default-features = false }
http = { version = "0.2.7", default-features = false }
hyper = { version = "0.14", default-features = false, features = [
	"stream",
] }
log = { version = "0.4", default-features = false }
once_cell = { version = "1.6", default-features = false, features = [
	"alloc", # for once_cell::race::OnceBox
] }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
sha2 = { version = "0.10", default-features = false }
time = { version = "0.3.4", default-features = false, features = [
	"formatting", # for time::format_description
	"std", # for time::OffsetDateTime::now_utc()
] }
tokio = { version = "1.5", default-features = false, features = [
	"parking_lot", # for slimmer tokio::sync::OnceCell
	"sync",
] }

acme = { path = "../acme" }
http-common = { path = "../http-common" }
log2 = { path = "../log2" }
