[package]
name = "azure"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
base64 = { version = "0.22", default-features = false }
form_urlencoded = { version = "1", default-features = false, features = [
	"alloc", # "the `alloc` feature must currently be enabled"
] }
futures-util = { version = "0.3", default-features = false }
hmac = { version = "0.12", default-features = false }
once_cell = { version = "1.7", default-features = false, features = [
	"alloc", # for once_cell::race::OnceBox
	"race", # for once_cell::race
] }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
sha2 = { version = "0.10", default-features = false }
time = { version = "0.3.4", default-features = false, features = [
	"formatting", # for time::format_description
	"std", # for time::OffsetDateTime::now_utc()
] }
tokio = { version = "1.5", default-features = false, features = [
	"parking_lot", # for slimmer tokio::sync::OnceCell
	"sync",
] }
x509-parser = { version = "0.16", default-features = false }

acme = { path = "../acme" }
http-common = { path = "../http-common" }
log2 = { path = "../log2" }


[lints]
workspace = true
