[package]
name = "function-deploy-cert-to-cdn"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2018"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
futures-util = { version = "0.3", default-features = false }
http = { version = "0.2", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
] }

azure = { path = "../azure", features = [
	"cdn",
	"key_vault_cert",
] }
function-worker = { path = "../function-worker" }
log2 = { path = "../log2" }
