[package]
name = "function-renew-cert"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
http = { version = "0.2", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
time = { version = "0.3", default-features = false, features = [
	"std", # for time::OffsetDateTime::now_utc()
] }
tokio = { version = "1", default-features = false, features = [
	"time",
] }

acme = { path = "../acme" }
azure = { path = "../azure" }
function-worker = { path = "../function-worker" }
http-common = { path = "../http-common" }
log2 = { path = "../log2" }
