[package]
name = "function-renew-cert"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
futures-util = { version = "0.3", default-features = false, features = [
	"alloc", # for futures_util::future::JoinAll
] }
hickory-resolver = { version = "0.24", default-features = false, features = [
	"tokio-runtime",
] }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
time = { version = "0.3", default-features = false, features = [
	"std", # for time::OffsetDateTime::now_utc()
] }
tokio = { version = "1", default-features = false, features = [
	"net", # for tokio::net::lookup_host
	"time",
] }

acme = { path = "../acme" }
azure = { path = "../azure" }
http-common = { path = "../http-common" }
log2 = { path = "../log2" }


[lints]
workspace = true
