[package]
name = "function-worker"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2018"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
base64 = { version = "0.13", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
	"clock", # for chrono::Utc::now()
] }
futures-util = { version = "0.3", default-features = false }
hmac = { version = "0.11", default-features = false }
http = { version = "0.2.5", default-features = false }
httparse = { version = "1.5", default-features = false, features = [
	"std", # for httparse::Error: std::error::Error
] }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
sha2 = { version = "0.9", default-features = false }
tokio = { version = "1.8", default-features = false, features = [
	"io-util", # for tokio::io::AsyncWriteExt
	"rt",
	"time",
] }

azure = { path = "../azure" }
log2 = { path = "../log2" }
