[package]
name = "function-worker"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1.0.46", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
futures-util = { version = "0.3", default-features = false, features = [
	"alloc", # for futures_util::stream::FuturesUnordered
] }
http = { version = "0.2.5", default-features = false }
httparse = { version = "1.5", default-features = false, features = [
	"std", # for httparse::Error: std::error::Error
] }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
time = { version = "0.3.4", default-features = false, features = [
	"std", # for time::OffsetDateTime::now_utc()
] }
tokio = { version = "1.8", default-features = false, features = [
	"io-util", # for tokio::io::AsyncWriteExt
	"rt",
	"time",
] }

azure = { path = "../azure" }
log2 = { path = "../log2" }
time2 = { path = "../time2" }
