[package]
name = "http-common"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1.0.12", default-features = false, features = [
	"std", # for <E: std::error::Error>Result<_, E>: anyhow::Context
] }
http = { version = "0.2", default-features = false }
httpdate = { version = "1", default-features = false }
hyper = { version = "0.14", default-features = false, features = [
	"client",
] }
hyper-rustls = { version = "0.24", default-features = false, features = [
	"http1",
	"tls12", # At least login.microsoftonline.com doesn't support TLS 1.3
	"webpki-tokio",
] }
serde = { version = "1.0.103", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std", # for serde_json::Error: std::error::Error
] }
time = { version = "0.3", default-features = false, features = [
	"std", # for time::OffsetDateTime::now_utc(), time::OffsetDateTime: From<std::time::SystemTime>
] }
