[package]
name = "log2"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2018"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
	"clock", # for chrono::Utc::now()
] }
futures-util = { version = "0.3", default-features = false }
hyper = { version = "0.14", default-features = false }
log = { version = "0.4", default-features = false }
once_cell = { version = "1", default-features = false, features = [
	"std", # for once_cell::sync
] }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std",
] }
tokio = { version = "1", default-features = false, features = [
	"rt",
	"sync",
] }
