[package]
name = "log2"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
	"clock", # for chrono::Utc::now()
] }
http = { version = "0.2.5", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std",
] }
