[package]
name = "log2"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2021"
publish = false


[dependencies]
anyhow = { version = "1.0.25", default-features = false }
http = { version = "0.2.5", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = [
	"derive",
] }
serde_json = { version = "1", default-features = false, features = [
	"std",
] }
time = { version = "0.3.4", default-features = false, features = [
	"std", # for time::OffsetDateTime::now_utc()
] }

time2 = { path = "../time2" }
