[package]
name = "update-cdn-cert"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2018"
publish = false


[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
futures-util = { version = "0.3", default-features = false }

azure = { path = "../azure", features = ["cdn", "key_vault_cert"] }
function-worker = { path = "../function-worker" }
